2.0.0/integrations/open-ai-executive-summary.md
---
type: page
title: ChatGPT (Executive Summary)
listed: true
description: 
index_title: ChatGPT (Executive Summary)
hidden: false
keywords: 
tags: 
---

MetaDefender Sandbox on premise / platform integrates with OpenAI using the ChatGPT model, providing the ability to generate a concise executive summary for files.

The primary aim of this executive summary is to make threat analysis easier to understand by highlighting the most significant aspects of the malware report. Relevant features are extracted using MetaDefender Sandbox, with input from malware analysts, to offer a concise overview of the malware's key insights and capabilities.

{% callout type="warning" title="Warning" %}
The ChatGPT integration is **disabled** **by default** and requires an OpenAI key that needs to be generated by the user. Data sent to OpenAI will remain private in accordance with their privacy policy: [https://openai.com/policies/privacy-policy](https://openai.com/policies/privacy-policy)
{% /callout %}

---

## Generating a ChatGPT Summary

**Go to Overview page and click on "***Get summary***" button**

{% inline-image url="asset:tj95bfx1bfr4" /%}

**Result: ChatGPT Executive Summary will be generated:**

{% image url="https://uploads.developerhub.io/prod/XX2D/mqd6lmzuecyl1o245cgp3t0qze9ruxsg0ban5ka9bl110hsp9okzrrc8mj1dohii.png" /%}

---

## Configuration of the ChatGPT integration

**Step #1 - Go to "***Admin panel***" and then "***Settings*\_\_\_\_\_**"**\_ **page**

**Step #2 - Go to "***Chat Gpt***" sub-page and configure Open-AI API key, model, prompt**

{% image url="https://uploads.developerhub.io/prod/XX2D/zpix9m8tlbpueouhze2ccpmfdkua6zenrp6ahmcaguw26rhlyuw14x4ykbubnbr9.png" /%}

### Configuration options

{% table layout="auto" %}
{% row %}
{% cell header=true colwidth=[309] %}
Field
{% /cell %}
{% cell header=true %}
Description
{% /cell %}
{% /row %}
{% row %}
{% cell %}
`CHAT_GPT_API_URL`
{% /cell %}
{% cell %}
The URL of the ChatGPT server
{% /cell %}
{% /row %}
{% row %}
{% cell %}
`CHAT_GPT_API_SECRET`
{% /cell %}
{% cell %}
ChatGPT API-key
{% /cell %}
{% /row %}
{% row %}
{% cell %}
`CHAT_GPT_PAYLOAD_MODEL_NAME`
{% /cell %}
{% cell %}
The name of the payload model, for example: gpt-3.5, gpt-4
{% /cell %}
{% /row %}
{% row %}
{% cell %}
`CHAT_GPT_PAYLOAD_SYSTEM_CONTENT`
{% /cell %}
{% cell %}
With the payload system content, you can further customize ChatGPT's responses. For example: "You are a malware expert who highlights the 5 most interesting properties of the malware."
{% /cell %}
{% /row %}
{% row %}
{% cell %}
`CHAT_GPT_PAYLOAD_USER_CONTENT`
{% /cell %}
{% cell %}
How would you like ChatGPT to respond
{% /cell %}
{% /row %}
{% /table %}

## Integration Workflow

1. Define the ChatGPT prompt and model.
2. Extract specific file fields and information
3. Construct the query string utilizing the acquired information and request input for the selected model.
4. Invoke the ChatGPT API to produce the generated summary.
5. Display the ChatGPT summary

{% image url="https://uploads.developerhub.io/prod/XX2D/9abu0w6z1lsswthi7y58qroctxn238s70uxapgw0hi4mufniqf0iup99hhmlytoz.png" /%}
